# pincite_evals

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: template_eval_input.csv
data/case_law_packets/: prepare_packets_run_report.csv
data/case_law_packets/packet_1/: packet_information.md  packet_manifest.csv  parsing_quality_summary.csv  pdf_list.txt  processing_report.json
data/case_law_packets/packet_1/blocks/: DOC001.blocks.csv  DOC002.blocks.csv  DOC003.blocks.csv  DOC004.blocks.csv  DOC005.blocks.csv  DOC006.blocks.csv  DOC007.blocks.csv  DOC008.blocks.csv
data/case_law_packets/packet_1/text/: DOC001.annotated.txt  DOC001.clean.txt  (+14 more)
data/case_law_packets/packet_2/: packet_information.md  packet_manifest.csv  parsing_quality_summary.csv  pdf_list.txt  processing_report.json
data/case_law_packets/packet_3/: packet_manifest.csv  parsing_quality_summary.csv  pdf_list.txt  processing_report.json
data/case_law_packets/packet_4/: packet_manifest.csv  parsing_quality_summary.csv  pdf_list.txt  processing_report.json
data/datasets/packet_1/: synthetic_items.csv  synthetic_items.jsonl
data/datasets/packet_2/: synthetic_items.csv  synthetic_items.jsonl
data/datasets/packet_3/: synthetic_items.csv  synthetic_items.jsonl
data/datasets/packet_4/: synthetic_items.csv  synthetic_items.jsonl
data/deep_research_prompts/: deep_research_v2.txt
data/prompts/: deep_research_v1.txt
docs/: data_schema.md  grading.md  packet_design.md  project_overview.md  template_model_configs.json
docs/plans/: synthetic_generation_implementation_plan.md
graders/: __init__.py  base.py  citation_existence.py  citation_fidelity_llm_judge.py  citation_overextension_llm_judge.py  llm_utils.py  precedence_llm_judge.py
graders/prompts/: precedence_system.md
prepare_packets/: README.md  prepare_packets.py
skills/synthetic-generation-audit/: SKILL.md
skills/synthetic-generation-audit/scripts/: analyze_synthetic_generation_run.py  run_and_analyze.sh
src/pincite_evals/: citations.py  eval_runner.py  experiment_review_dashboard.py  io.py  openai_model_capabilities.py  prompt_templates.py  schema.py  template_eval_runner.py
src/pincite_evals/eval_runner/: README.md  __init__.py  runner.py
src/pincite_evals/graders/: __init__.py  base.py  citation_fidelity_llm_judge.py  citation_overextension_llm_judge.py  expected_citation_presence.py  llm_judge_base.py  llm_utils.py  precedence_llm_judge.py
src/pincite_evals/synthetic_generation/: README.md  __init__.py  cli.py  config.py  pipeline.py  run_all_packets.sh  schema.py  structured_outputs.py
tests/: conftest.py  test_citation_parse.py  test_eval_runner.py  test_eval_runner_request_params.py  test_expected_citation_presence_grader.py  test_experiment_review_dashboard.py  test_llm_judge_graders.py  test_prepare_packets_annotation_render.py  test_prompt_templates.py  test_template_eval_runner.py
tests/synthetic_generation/: test_deterministic_validation.py  test_generation_failures.py  test_pipeline_e2e.py  test_pipeline_smoke.py  test_schema.py
(+92 files in other folders)
